--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "@stripe/stripe-js": "^5.6.0",
     "@tanstack/react-query": "^5.66.7",
     "@types/uuid": "^10.0.0",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "google-auth-library": "^9.15.1",
