--- a/api/backend/package.json
+++ b/api/backend/package.json
@@ -26,7 +26,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^11.0.6",    
+    "@nestjs/swagger": "^11.0.6",
     "@nestjs/typeorm": "^11.0.0",
     "@prisma/client": "^6.4.0",
     "@supabase/supabase-js": "^2.48.1",
@@ -50,6 +50,7 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.13.3",
     "pino": "^9.6.0",
+    "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
     "prisma": "^6.4.0",
     "reflect-metadata": "^0.2.0",
