--- a/api/backend/tsconfig.json
+++ b/api/backend/tsconfig.json
@@ -7,7 +7,10 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
-    "types": ["node"],
+    "types": [
+      "node",
+      "jest"
+    ],
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
