Railway deploy Updates package.json to include essential NestJS dependencies for enhanced functionality
- Added core NestJS packages including @nestjs/common, @nestjs/core, and @nestjs/swagger to support improved application structure and features.
- Included additional dependencies such as @nestjs/jwt and @nestjs/passport for enhanced security and authentication capabilities.
- Updated package versions to ensure compatibility and leverage the latest improvements in the NestJS ecosystem.

--- a/package.json
+++ b/package.json
@@ -23,5 +23,17 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "@nestjs/common": "^11.0.0",
+    "@nestjs/core": "^11.0.0",
+    "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/swagger": "^11.0.6",
+    "@nestjs/axios": "^4.0.0",
+    "@nestjs/config": "^4.0.0",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/terminus": "^11.0.0",
+    "@nestjs/typeorm": "^11.0.0"
   }
 }
