--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
