--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   ],
   "scripts": {
     "build": "npm run build:api && npm run build:web",
-    "build:api": "cd api/backend && npm install --legacy-peer-deps && npm run build",
-    "build:web": "cd web && npm install --legacy-peer-deps && npm run build",
+    "build:api": "cd api/backend && npm run build",
+    "build:web": "cd web && npm run build",
     "start": "npm run start:api && npm run start:web",
     "start:api": "cd api/backend && npm run start:prod",
     "start:web": "cd web && npm run start",
