--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "dev:web": "cd web && npm run dev",
     "test": "npm run test:api && npm run test:web",
     "test:api": "cd api/backend && npm run test",
-    "test:web": "cd web && npm run test",
-    "install": "npm install --legacy-peer-deps"
+    "test:web": "cd web && npm run test"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
