Refactor build commands in railway.toml for improved dependency management
- Updated build commands for both API and web services to remove the use of '--legacy-peer-deps', aligning with current best practices for dependency installation.
- Ensured a more streamlined and consistent build process across environments, enhancing overall project maintainability.

--- a/railway.toml
+++ b/railway.toml
@@ -12,11 +12,11 @@ restartPolicyType = "on_failure"
 name = "api"
 rootDirectory = "api/backend"
 startCommand = "npm run start:prod"
-buildCommand = "npm install --legacy-peer-deps && npm run build"
+buildCommand = "npm install && npm run build"
 healthcheckPath = "/api/health"
 
 [service.web]
 name = "web"
 rootDirectory = "web"
 startCommand = "npm run start"
-buildCommand = "npm install --legacy-peer-deps && npm run build" 
+buildCommand = "npm install && npm run build"
