Add Dockerfile and configuration files for improved build and deployment process
- Introduced a Dockerfile to streamline the build and deployment of the application, utilizing multi-stage builds for optimized production images.
- Added .npmrc for enhanced npm configuration, including network timeout settings to improve CI/CD reliability.
- Updated nixpacks.toml to align with the new Docker-based build process, removing legacy dependency commands for better compatibility.
- Created pnpm-workspace.yaml to define package structure for monorepo management, facilitating easier dependency handling across API and web applications.
- Adjusted railway.toml to utilize the Dockerfile for builds and updated health check paths for improved service monitoring.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,11 @@
+[phases.setup]
+nixPkgs = ['nodejs_20', 'pnpm']
+
 [phases.install]
-cmds = ['npm install --legacy-peer-deps'] 
+cmds = ['pnpm install']
+
+[phases.build]
+cmds = ['pnpm run build']
+
+[start]
+cmd = 'npm run start'
