--- a/api/backend/package.json
+++ b/api/backend/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.14.1",
     "connect-redis": "^8.0.1",
     "csurf": "^1.2.2",
+    "dotenv": "^16.4.5",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "firebase-admin": "^13.1.0",
@@ -61,7 +62,8 @@
     "speakeasy": "^2.0.0",
     "stripe": "^17.6.0",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^11.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
