--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "npm run start"
+startCommand = "npm run start:api"
 healthcheckPath = "/api/backend/health"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
