--- a/railway.toml
+++ b/railway.toml
@@ -3,6 +3,6 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "npm run start:api"
+startCommand = "npm run start"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
