--- a/railway.toml
+++ b/railway.toml
@@ -3,6 +3,20 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "npm run start"
+startCommand = "npm run start:api"
+healthcheckTimeout = 100
+restartPolicyType = "on_failure"
+
+[[services]]
+name = "backend"
+dockerfilePath = "Dockerfile"
+# healthcheckPath = "/health"
+healthcheckTimeout = 100
+restartPolicyType = "on_failure"
+
+[[services]]
+name = "frontend"
+dockerfilePath = "web/Dockerfile"
+# healthcheckPath = "/"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
