--- a/railway.toml
+++ b/railway.toml
@@ -10,13 +10,11 @@ restartPolicyType = "on_failure"
 [[services]]
 name = "backend"
 dockerfilePath = "Dockerfile"
-# healthcheckPath = "/health"
-healthcheckTimeout = 100
+PORT=8000
 restartPolicyType = "on_failure"
 
 [[services]]
 name = "frontend"
+PORT=3000
 dockerfilePath = "web/Dockerfile"
-# healthcheckPath = "/"
-healthcheckTimeout = 100
 restartPolicyType = "on_failure"
