Enhance Dockerfile and railway.toml for comprehensive service startup
- Updated Dockerfile to include the web application build process and copy necessary files for both frontend and backend services.
- Introduced a new start script to manage the startup sequence for backend and frontend services.
- Modified railway.toml to reflect the new start command, ensuring both services are initiated correctly during deployment.
- Exposed ports for both services to facilitate communication.

--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "npm run start:api"
+startCommand = "/app/start.sh"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
 
