--- a/railway.toml
+++ b/railway.toml
@@ -3,18 +3,16 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "npm run start:api"
+startCommand = "/app/start.sh"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
 
 [[services]]
 name = "backend"
-dockerfilePath = "Dockerfile"
 PORT=8000
 restartPolicyType = "on_failure"
 
 [[services]]
 name = "frontend"
 PORT=3000
-dockerfilePath = "web/Dockerfile"
 restartPolicyType = "on_failure"
