Update Dockerfile and API client for improved environment variable handling
- Modified the Dockerfile to set default values for NEXT_PUBLIC_BACKEND_URL and NEXT_PUBLIC_API_URL to use the current domain instead of localhost with a port, enhancing consistency in production environments.
- Added logging in the API client to indicate when the production environment is detected without environment variables set, improving debugging capabilities and monitoring.

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -34,8 +34,8 @@ ARG NEXT_PUBLIC_API_URL
 ARG RAILWAY_PUBLIC_DOMAIN
 
 # Set default values for the build environment variables
-ENV NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL:-http://localhost:8000}
-ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8000}
+ENV NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL:-http://localhost}
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost}
 ENV RAILWAY_PUBLIC_DOMAIN=${RAILWAY_PUBLIC_DOMAIN:-localhost}
 
 # Now run the build with these environment variables available
@@ -74,8 +74,8 @@ RUN chmod +x /app/start.sh
 
 # Set environment variables for runtime
 ENV NODE_ENV=production
-ENV NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL:-http://localhost:8000}
-ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:8000}
+ENV NEXT_PUBLIC_BACKEND_URL=${NEXT_PUBLIC_BACKEND_URL:-http://localhost}
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost}
 ENV RAILWAY_PUBLIC_DOMAIN=${RAILWAY_PUBLIC_DOMAIN:-localhost}
 
 # Expose ports for both frontend and backend
